// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Product Tile LargerProductTile smoke-test 1`] = `
<div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
  <div class="items-center flex"
       style="gap: 48px;"
  >
    <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
          style="width: 144px; height: 144px; border-radius: 36px;"
    >
      <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
            style="height: 142px; border-radius: 36px;"
      >
        <svg class="text-neutral-1300 dark:text-neutral-000"
             style="width: 96px; height: 96px;"
        >
          <use xlink:href="#sprite-icon-product-pubsub-mono">
          </use>
        </svg>
      </span>
    </span>
    <span class="flex flex-col justify-center">
      <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
            style="font-size: 36px; letter-spacing: 0.06em;"
      >
        Ably
      </span>
      <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
            style="font-size: 55.3846px;"
      >
        Pub/Sub
      </span>
    </span>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTileWithFilledIcons smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-32">
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Pub/Sub
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs to build any realtime experience
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Chat
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Rapidly build chat features and roll-out at scale
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Spaces
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Create collaborative environments in a few lines of code
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveSync
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync database changes with frontend clients
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking">
            </use>
          </svg>
          <svg class="text-neutral-1300 dark:text-neutral-000 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Asset Tracking
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Simple APIs to build realtime tracking applications
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 pointer-events-none"
       aria-hidden="true"
  >
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="hidden group-hover/product-tile:flex"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects">
            </use>
          </svg>
          <svg class="text-neutral-600 dark:text-neutral-700 flex group-hover/product-tile:hidden"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block">
          <span class="table-cell font-sans bg-neutral-300 dark:bg-neutral-1000 rounded-full text-gui-unavailable tracking-widen-0.04 font-bold leading-snug"
                style="font-size: 6px; padding: 2.5px 5px;"
          >
            COMING SOON
          </span>
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-700 dark:text-neutral-600"
              style="font-size: 15.3846px;"
        >
          LiveObjects
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across multiple devices
    </span>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTileWithOverriddenStylesAndClick smoke-test 1`] = `
<div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-pink-200 dark:bg-pink-800 hover:bg-pink-600 dark:hover:bg-pink-400 cursor-pointer">
  <div class="items-center flex"
       style="gap: 13.3333px;"
  >
    <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
          style="width: 40px; height: 40px; border-radius: 10px;"
    >
      <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
            style="height: 38px; border-radius: 10px;"
      >
        <svg class="text-neutral-1300 dark:text-neutral-000"
             style="width: 26.6667px; height: 26.6667px;"
        >
          <use xlink:href="#sprite-icon-product-pubsub-mono">
          </use>
        </svg>
      </span>
    </span>
    <span class="flex flex-col justify-center">
      <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
            style="font-size: 10px; letter-spacing: 0.06em;"
      >
        Ably
      </span>
      <span class="block ui-text-p2 font-bold dark:text-neutral-000 mt-[-3px] text-orange-500"
            style="font-size: 15.3846px;"
      >
        Pub/Sub
      </span>
    </span>
  </div>
  <span class="block ui-text-p3 font-medium leading-snug dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300 text-blue-500">
    Low-level APIs to build any realtime experience
  </span>
</div>
`;

exports[`Components/Product Tile ProductTiles smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-32">
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Pub/Sub
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs to build any realtime experience
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Chat
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Rapidly build chat features and roll-out at scale
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Spaces
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Create collaborative environments in a few lines of code
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveSync
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync database changes with frontend clients
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 hover:bg-neutral-100 dark:hover:bg-neutral-1200 cursor-pointer">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200 group-hover/product-tile:bg-neutral-000 dark:group-hover/product-tile:bg-neutral-1300"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1000 dark:text-neutral-300 group-hover/product-tile:text-neutral-1300 dark:group-hover/product-tile:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Asset Tracking
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Simple APIs to build realtime tracking applications
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 pointer-events-none"
       aria-hidden="true"
  >
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-600 dark:text-neutral-700"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block">
          <span class="table-cell font-sans bg-neutral-300 dark:bg-neutral-1000 rounded-full text-gui-unavailable tracking-widen-0.04 font-bold leading-snug"
                style="font-size: 6px; padding: 2.5px 5px;"
          >
            COMING SOON
          </span>
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-700 dark:text-neutral-600"
              style="font-size: 15.3846px;"
        >
          LiveObjects
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across multiple devices
    </span>
  </div>
</div>
`;

exports[`Components/Product Tile ProductTilesWithoutDescriptionsOrLabels smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-32 justify-center">
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub-mono">
            </use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat-mono">
            </use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces-mono">
            </use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync-mono">
            </use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking-mono">
            </use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="transition-colors group/product-tile bg-neutral-000 dark:bg-neutral-1300 pointer-events-none"
       aria-hidden="true"
  >
    <div class="items-center inline-flex"
         style="gap: 0px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-600 dark:text-neutral-700"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects-mono">
            </use>
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Components/Product Tile StaticProductTiles smoke-test 1`] = `
<div class="grid sm:grid-cols-3 gap-32">
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-pubsub-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Pub/Sub
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Low-level APIs to build any realtime experience
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-chat-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Chat
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Rapidly build chat features and roll-out at scale
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-spaces-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Spaces
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Create collaborative environments in a few lines of code
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-livesync-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          LiveSync
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync database changes with frontend clients
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300">
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-1300 dark:text-neutral-000"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-asset-tracking-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block font-bold uppercase ui-text-p2 leading-snug text-neutral-700 dark:text-neutral-500"
              style="font-size: 10px; letter-spacing: 0.06em;"
        >
          Ably
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-1300 dark:text-neutral-000 mt-[-3px]"
              style="font-size: 15.3846px;"
        >
          Asset Tracking
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Simple APIs to build realtime tracking applications
    </span>
  </div>
  <div class="transition-colors group/product-tile flex flex-col p-12 rounded-lg gap-8 bg-neutral-000 dark:bg-neutral-1300 pointer-events-none"
       aria-hidden="true"
  >
    <div class="items-center flex"
         style="gap: 13.3333px;"
    >
      <span class="block p-1 bg-gradient-to-b from-neutral-000 to-neutral-300 dark:from-neutral-1000 dark:to-neutral-1300"
            style="width: 40px; height: 40px; border-radius: 10px;"
      >
        <span class="flex items-center justify-center bg-neutral-100 dark:bg-neutral-1200"
              style="height: 38px; border-radius: 10px;"
        >
          <svg class="text-neutral-600 dark:text-neutral-700"
               style="width: 26.6667px; height: 26.6667px;"
          >
            <use xlink:href="#sprite-icon-product-liveobjects-mono">
            </use>
          </svg>
        </span>
      </span>
      <span class="flex flex-col justify-center">
        <span class="block">
          <span class="table-cell font-sans bg-neutral-300 dark:bg-neutral-1000 rounded-full text-gui-unavailable tracking-widen-0.04 font-bold leading-snug"
                style="font-size: 6px; padding: 2.5px 5px;"
          >
            COMING SOON
          </span>
        </span>
        <span class="block ui-text-p2 font-bold text-neutral-700 dark:text-neutral-600"
              style="font-size: 15.3846px;"
        >
          LiveObjects
        </span>
      </span>
    </div>
    <span class="block ui-text-p3 font-medium leading-snug text-neutral-700 dark:text-neutral-600 group-hover/product-tile:text-neutral-1000 dark:group-hover/product-tile:text-neutral-300">
      Sync application state across multiple devices
    </span>
  </div>
</div>
`;
